<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="com.fm.bodytracker.models.BodyTrackerViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <!-- weight -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/height"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sp_weightUnit"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_weight"
                style="@style/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Spinner widget-->

        <Spinner
            android:id="@+id/sp_weightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/weight_units"
            />


        <!-- Fat mass-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fatMass"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/fatMass"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            app:startIconDrawable="@drawable/ic_fatmass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_fatMass"
                style="@style/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ufatMass"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ufat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fatMass"
            app:layout_constraintTop_toBottomOf="@+id/sp_weightUnit" />

        <!-- Muscle mass-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/muscleMass"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/muscleMass"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fatMass"
            app:startIconDrawable="@drawable/ic_musclemass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_muscleMass"
                style="@style/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/uMuscleMass"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ufat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/muscleMass"
            app:layout_constraintTop_toBottomOf="@+id/ufatMass" />

        <!-- Total Body Water-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyWater"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/tbw"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/muscleMass"
            app:startIconDrawable="@drawable/ic_bodywater">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_bodywater"
                style="@style/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/uBodyWater"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ufat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bodyWater"
            app:layout_constraintTop_toBottomOf="@+id/uMuscleMass" />


        <!-- Bone Mass-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boneMass"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/boneMass"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyWater"
            app:startIconDrawable="@drawable/ic_bones">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_boneMass"
                style="@style/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/uBoneMass"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ufat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boneMass"
            app:layout_constraintTop_toBottomOf="@+id/uBodyWater" />

        <!-- Date  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Date"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="@id/ubodyWater"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boneMass"
            app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_birthDate"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="showDatePickerDialog"
            android:text="date"
            />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>