<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="com.fm.bodytracker.models.BodyTrackerViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Name  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        style="@style/edit_text"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- height  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height"
        style="@style/edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/height"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/sp_measuresUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:startIconDrawable="@drawable/ic_height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_height"
            style="@style/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
        <!--Spinner widget-->

    <Spinner
        android:id="@+id/sp_measuresUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:entries="@array/height_units"
        />




        <!-- height  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthDate"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height"
            app:startIconDrawable="@drawable/ic_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_birthDate"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:onClick="showDatePickerDialog"
                android:text="@{viewModel.birthdaydte}"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>